--- a/app/javascript/style/video/_layout.scss
+++ b/app/javascript/style/video/_layout.scss
@@ -78,6 +78,7 @@
       }
 
       .main-footer {
+        margin: auto 10px 0 0;
         display: flex;
       }
     }
